21/02/2017

Changed:
	commander optics model of some vehicles
	reverted CIT #14888 bug fix
	turret zeroing initial value of Dingo vehicles

Fixed:
	Dingo w/ GMG cloud effects are too big


20/02/2017

Added:
	Light version of UK-59 (UK59_ACR_Small)

Changed:
	ACR pistol sounds rearrenged, better new ACR sounds are used
	ACR SD pistol and SD EVO 3 sound configs adjusted to fit with other SD weapons

Fixed:
	ACR vehicles are now OA-compatible
	ACR weapons are now OA-compatible
	ACR EVO 3 was playing MP5 sounds instead of new ACR sounds
	ACR CZ 750 used default M24 sound instead of new ACR sound
	ACR BREN SD sound changed to stock SD 5.56 sound as none of new ACR sounds fit it very well


16/02/2017

Added:
	Mi-24 proper holographic sights

Changed:
	models of 20Rnd_9x19_EVO(SD) and 30Rnd_9x19_MP5SD magazines to more suitable

Fixed:
	SCAR_H_STD_EGLM_Spect no 1x option (http://dev.withsix.com/issues/17245)
	ACR Mi-24 clan sign was always black (https://dev.withsix.com/issues/43013)
	ACR Mi-24 Yak-B was not rotating with the turret
	Mi-24 engine too vulnerable (https://dev.withsix.com/issues/26427 https://dev.withsix.com/issues/28110)
	Mi-24P was not able to aim ATGMs (https://dev.withsix.com/issues/27938)


13/02/2017

Fixed:
	Mi-24P properly hides bomb proxies when they're used up by gunner
	Pchela-1T had no get in memory points, had wrong get in animation
	MQ-9 Reaper had needless get in animation delay
	Ka-137 and Pchela-1T no longer explode into huge explosion on destruction
	Fire in the sky bug fixed


07/02/2017

Fixed:
	ATV physics when driving on objects like bridges (http://dev.withsix.com/issues/75850)
	ATV handling and bounding issues (http://dev.withsix.com/issues/75851)
	ATV had wrong low LOD texture
	Woodland ATV had desert camo texture


02/02/2017

Fixed:
	MQ-9 Reaper laser designator now precise, propeller correctly turns into blurred one, UAV geometry is visible from gunner view