@@ -7,6 +7,7 @@ Changed:
 
 Fixed:
 	Dingo w/ GMG cloud effects are too big
+	GAZ Volga vehicles have unaccesible inventories from outside (http://dev.withsix.com/issues/66136).
 
 
 20/02/2017
